--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     padding: 3.2rem;
     background: var(--background-primary);
 }
-
+ 
 header {
     margin-bottom: 4.4rem;
     max-width: 62.7rem;
@@ -171,6 +171,35 @@ main {
     }
 }
 
+.hide-warning {
+    opacity: 0;
+    transform: translateY(-10px);
+}
+
+
+
+@media(min-width: 627px) {
+    header {
+        img {
+            margin-bottom: 6.4rem;
+        }
+    }
+
+    .add-item {
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        gap: 1.6rem;
+
+        input {
+            margin-bottom: 0;
+            grid-column: 1 / 8;
+        }
+
+        button {
+            grid-column: 8 / 11;
+        }
+    }
+}
 
 .warning {
     background: var(--color-danger);
@@ -180,8 +209,6 @@ main {
     justify-content: space-between;
     border-radius: 1.2rem;
     margin-top: 2.4rem;
-
-
     opacity: 1;
     transform: translateY(0);
     transition: opacity .4s ease, transform .4s ease;
@@ -199,11 +226,7 @@ main {
     button {
         border: none;
         background: none;
-        color: var(--always-white');
+        color: var(--always-white);
     }
 }
 
-.hide-warning {
-    opacity: 0;
-    transform: translateY(-10px);
-}
